<resources>
    <string name="app_name">Caculator</string>
    <string name="_123">123</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="a">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="b">+</string>
    <string name="_0">0</string>
    <string name="d">.</string>
    <string name="e">=</string>
    <string name="f">-</string>
</resources>