<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cat"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_margin="20dp"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/tv"
            android:text="@string/_123"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
        </TextView>

    </RelativeLayout>

    <TableLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:weightSum="2">
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

        </TableRow>
        <TableRow
            android:weightSum="4">
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button
                >

        </TableRow>
        <TableRow
            android:weightSum="4">
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

        </TableRow>
        <TableRow
            android:weightSum="4">
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

            <Button
                android:onClick="ButtonClick"
                android:layout_weight="1"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

        </TableRow>
        <TableRow
            android:weightSum="4">
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                android:text="@string/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:onClick="ButtonClick"
                android:layout_weight="1"
                android:textSize="30sp"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_margin="2dp"
                android:text="@string/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
        </TableRow>
    </TableLayout>



</LinearLayout>